blazor delete message

--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Customer/CustomerList.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Customer/CustomerList.razor
@@ -64,7 +64,7 @@ else {
         var confirm = await jsRuntime.InvokeAsync<bool>("confirm", "Delete Customer. Are you sure?");
         if (confirm) {
             var response = await httpClient.DeleteAsync($"customer/{customer.Id}");
-            response.EnsureSuccessStatusCode();
+            if ((int)response.StatusCode != 200) { await jsRuntime.InvokeVoidAsync("alert", "Cant Delete Customer Involved with Transaction!"); }
             await LoadItemsFromServer();
         }
     }
