--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Index.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Index.razor
@@ -13,7 +13,7 @@
     <p>Loading ...</p>
 }
 else {
-    <div class="row">
+    <div class="row mt-2">
         <div class="col-md-6">
             <label class="form-label">Please choose your Type:</label>
             <select class="form-control" @bind="Employee.EmployeeType">
