--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeList.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Employee/EmployeeList.razor
@@ -76,6 +76,6 @@ else {
     }
 
     private void BackTo() {
-        navigationManager.NavigateTo("/manager");
+        navigationManager.NavigateTo("/");
     }
 }
