--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Ledger.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Ledger.razor
@@ -70,6 +70,6 @@ else {
     }
 
     private void BackTo() {
-        navigationManager.NavigateTo("/manager");
+        navigationManager.NavigateTo("/");
     }
 }
