--- a/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Item/ItemEdit.razor
+++ b/Session-30/FuelStation/FuelStation.Blazor/Client/Pages/Item/ItemEdit.razor
@@ -7,7 +7,7 @@
 @inject HttpClient httpClient
 @inject NavigationManager navigationManager
 
-<h3>Create/Edit Item</h3>
+<h3>@title</h3>
 
 @if (Item == null) {
     <Spinner Type="SpinnerType.Border" />
@@ -60,13 +60,16 @@ else {
 @code {
     [Parameter] public int? Id { get; set; }
     ItemEditDto? Item { get; set; } = new();
+    string? title;
 
     protected override async Task OnInitializedAsync() {
         if (Id == null) {
             Item = await httpClient.GetFromJsonAsync<ItemEditDto>("item");
+            title = "Create Item";
         }
         else {
             Item = await httpClient.GetFromJsonAsync<ItemEditDto>($"item/{Id}");
+            title = "Edit Item";
         }
     }
 
